# SDML

./: .gitignore  CMakeLists.txt
build-util/: build_prerun.py
code-maker/: cmake_code_maker.py  kinds_def.py
code-maker/util/: add_header.py  pathinfo.py  standardlize_lflr.py
design-doc/: 当前语法.txt  解析器要求.txt  语法定义.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  demo1.cpp  demo1.out.txt
src/include/sdml/: sdml.h
src/include/sdml/container/: BufRef.h  Buffer.h  container.h
src/include/sdml/core/: ASTNode.h  ASTParser.h  core.h  kind_def.h  lexer.cpp  lexer.h
src/include/sdml/system/: system.h
src/include/sdml/util/: re2.h
src/test/: CMakeLists.txt  test_bufRef.cpp  test_buffer.cpp  test_lexer.cpp  test_util.h
